NVTT Linux port

--- a/src/Externals/NVTT/src/nvimage/CMakeLists.txt
+++ b/src/Externals/NVTT/src/nvimage/CMakeLists.txt
@@ -27,7 +27,7 @@ SET(IMAGE_SRCS
 	PsdFile.h
 	TgaFile.h)
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../../include ${CMAKE_CURRENT_SOURCE_DIR}/../nvcore ${CMAKE_CURRENT_SOURCE_DIR}/../nvmath)
 
 IF(PNG_FOUND)
 	SET(LIBS ${LIBS} ${PNG_LIBRARIES})
