--- a/src/Layers/xrRenderPC_R3/xrRender_R3.vcxproj.filters
+++ b/src/Layers/xrRenderPC_R3/xrRender_R3.vcxproj.filters
@@ -705,6 +705,9 @@
     <ClInclude Include="blender_fxaa.h">
       <Filter>Shading templates</Filter>
     </ClInclude>
+    <ClInclude Include="..\xrRender\KinematicsAddBoneTransform.hpp">
+      <Filter>Refactored\Execution &amp; 3D\Visuals\Skeleton</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
