SWM: Ported xrEngine

--- a/src/xrEngine/xrEngine.vcxproj
+++ b/src/xrEngine/xrEngine.vcxproj
@@ -251,6 +251,7 @@
     <ClInclude Include="Rain.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="splash.h" />
+    <ClInclude Include="ShadersExternalData.h" />
     <ClInclude Include="StatGraph.h" />
     <ClInclude Include="Stats.h" />
     <ClInclude Include="stdafx.h" />
@@ -259,6 +260,7 @@
     <ClInclude Include="thunderbolt.h" />
     <ClInclude Include="tntQAVI.h" />
     <ClInclude Include="vis_common.h" />
+    <ClInclude Include="vis_object_data.h" />
     <ClInclude Include="WaveForm.h" />
     <ClInclude Include="xrHemisphere.h" />
     <ClInclude Include="xrImage_Resampler.h" />
